# archivesystem

./: README.md  pyproject.toml
main/: settings.py
static/css/: botton.css  for_image_som.css  for_rep_som.css  for_title_som.css  style.css
system/: views.py
system/csvs/: rep_image_som_result_3-3A.csv  rep_image_som_result_40-60_20230224_112013.csv
system/templates/system/: elections.html  img-som.html  menu.html  som.html  title-som.html
system/templatetags/: myTags.py
